Changed files to remove references to spark

--- a/notebooks/7a-election-explore.ipynb
+++ b/notebooks/7a-election-explore.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering: Presidential Contributions\n",
+    "# Data Cleanup: Presidential Contributions\n",
     "\n",
     "Let's clean up the presidential contributions dataset by feature engineering."
    ]
@@ -98,18 +98,16 @@
    "outputs": [],
    "source": [
     "# Contribution receipt less than zero?\n",
-    "## TODO : filter\n",
-    "## HINT : filter ('column name for amount' < 0)\n",
-    "#negative_contrib = contrib2.???(' condition ')\n",
-    "negative_contrib = contribs2.filter('???')\n",
+    "## TODO : query\n",
+    "## HINT : query ('column name for amount' < 0)\n",
+    "negative_contrib = contrib2.???(' condition ')\n",
     "\n",
     "## TODO : how many negative contributions do we have?\n",
     "## Hint : count\n",
     "print(negative_contrib.count())\n",
     "\n",
     "## TODO : print some sample data\n",
-    "## Hint : show()\n",
-    "negative_contrib.show(10, False)"
+    "negative_contrib"
    ]
   },
   {
@@ -193,7 +191,8 @@
    "metadata": {},
    "source": [
     "### Calculate AVG, MIN, MAX contributions per candidate\n",
-    "For this we can easily use SQL"
+    "\n",
+    "How can we get summary stats like avg, min and max?"
    ]
   },
   {
@@ -206,10 +205,8 @@
    "source": [
     "## TODO \n",
     "\n",
-    "pos_contribs.createOrReplaceTempView(\"contribs\")\n",
     "\n",
-    "avg_per_candidate = spark.sql(\"select CAND_NM, AVG(CONTB_RECEIPT_AMT) as avg_contrib from contribs group by CAND_NM order by avg_contrib  DESC\")\n",
-    "avg_per_candidate.show(20, False)"
+    "avg_per_candidate = ???\n"
    ]
   },
   {
@@ -229,7 +226,7 @@
    "outputs": [],
    "source": [
     "## TODO \n",
-    "#avg_per_occupation = spark.sql(\"\")"
+    "#avg_per_occupation = ???"
    ]
   },
   {
