--- a/notebooks/1b-visualize-intro.ipynb
+++ b/notebooks/1b-visualize-intro.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing Data"
+    "# Visualizing Data\n",
+    "\n",
+    "Let's look at some basic visualizations in matplotlib\n",
+    "\n",
+    "1. Boxplot\n",
+    "2. Histograms\n",
+    "3. Scatterplots"
    ]
   },
   {
@@ -54,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "salaries = np.array([22, 25, 30, 35, 40, 42, 45, 50, 55, 60, 65, 70])\n",
@@ -100,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## TODO : add labels\n",
@@ -138,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
