--- a/notebooks/7a-election-explore.ipynb
+++ b/notebooks/7a-election-explore.ipynb
@@ -127,9 +127,9 @@
    "source": [
     "## TODO: \n",
     "##     extract only positive  contribs\n",
-    "pos_contribs = contribs2.filter('???')\n",
+    "pos_contribs = contribs2.???\n",
     "\n",
-    "print(pos_contribs.count())"
+    "print(pos_contribs)"
    ]
   },
   {
