Made changes to labs

--- a/notebooks/6b-prosper-tree.ipynb
+++ b/notebooks/6b-prosper-tree.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dataset = pd.read_csv(\"/data/prosper-loan/prosper-loan-data.csv.gz\")\n"
@@ -2260,17 +2262,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 8: Run the pipeline that will fit our decision tree\n",
+    "## Step 8: Fit the decision tree\n",
     "\n",
-    "We have a 3 stage pipeline here: \n",
+    "We are now going to fit our decision tree\n",
     "\n",
-    " 1. LabelIndexer\n",
-    " 2. FeatureIndexer\n",
-    " 3. DecisionTreeClassifier\n",
-    " \n",
-    "Running the pipeline will do all three.  Note that our other indexer pipeline already ran above.\n",
-    "\n",
-    "**=> TODO: Add labelIndexer, featureIndexer, and dt to our pipeline**\n",
     "\n"
    ]
   },
@@ -2284,11 +2279,7 @@
    "source": [
     "\n",
     "# Train a DecisionTree model.\n",
-    "dt = DecisionTreeClassifier(labelCol=\"indexedLabel\", featuresCol=\"indexedFeatures\", maxBins=5000)\n",
-    "\n",
-    "# Chain indexers and tree in a Pipeline\n",
-    "pipeline = Pipeline(stages=[???, ???, ???])\n",
-    "\n"
+    "dt = DecisionTreeClassifier(???)\n"
    ]
   },
   {
@@ -2300,12 +2291,11 @@
    "outputs": [],
    "source": [
     "# Train model.  This also runs the indexers.\n",
-    "\n",
-    "model = pipeline.fit(trainingData)\n",
+    "# TODO: Train Model\n",
     "\n",
     "# Make predictions.\n",
-    "predictions = model.transform(testData)\n",
-    "\n",
+    "# TODO: Make predictions\n",
+    "predictions = \n",
     "# Select example rows to display.\n",
     "predictions.select(\"prediction\", \"indexedLabel\", \"features\").show(5)\n",
     "\n"
@@ -2328,11 +2318,7 @@
    },
    "outputs": [],
    "source": [
-    "# Select (prediction, true label) and compute test error\n",
-    "evaluator = MulticlassClassificationEvaluator(\n",
-    "    labelCol=\"indexedLabel\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
-    "accuracy = evaluator.evaluate(predictions)\n",
-    "print(\"Test Error = %g \" % (1.0 - accuracy))\n"
+    "# TODO: Evaluate model for accuracy"
    ]
   },
   {
@@ -2343,10 +2329,18 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "treeModel = model.stages[2]\n",
-    "# summary only\n",
-    "print(treeModel)"
+    "Print out our trained decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Print out decision tree"
    ]
   }
  ],
