--- a/notebooks/7b-election-rforest.ipynb
+++ b/notebooks/7b-election-rforest.ipynb
@@ -40,7 +40,11 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.cross_validation  import train_test_split, cross_val_score, ShuffleSplit\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -72,9 +76,7 @@
     "prediction_column = ['CAND_NM']\n",
     "numeric_columns = ['LAT', 'LNG']\n",
     "feature_columns = ['LASTNAME', 'FIRSTNAME', 'CONTBR_ST', 'LAT', 'LNG', 'CONTBR_EMPLOYER', \"CONTBR_OCCUPATION\"]\n",
-    "categorical_columns = ['LASTNAME', 'FIRSTNAME', 'CONTBR_ST', 'CONTBR_EMPLOYER', \"CONTBR_OCCUPATION\"]\n",
-    "categorical_index = ['LASTNAME_index', 'FIRSTNAME_index', 'CONTBR_ST_index', 'CONTBR_EMPLOYER_index', \n",
-    "                     \"CONTBR_OCCUPATION_index\"]"
+    "categorical_columns = ['LASTNAME', 'FIRSTNAME', 'CONTBR_ST', 'CONTBR_EMPLOYER', \"CONTBR_OCCUPATION\"]\n"
    ]
   },
   {
@@ -107,7 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Build Indexers and feature vector\n",
+    "## Step 2: Make Feature Vector, and Index Categorical Columns\n",
+    "\n",
+    "Let's build a feature Vector\n",
     "\n",
     "Let's index all the categorical columns, and build a labeld index."
    ]
@@ -120,10 +124,28 @@
    },
    "outputs": [],
    "source": [
-    "indexers = [StringIndexer(inputCol=column, outputCol=column+\"_index\", handleInvalid=\"keep\").fit(dataset) for column in categorical_columns ]\n",
-    "pipeline = Pipeline(stages=indexers)\n",
-    "df_r2 = pipeline.fit(dataset).transform(dataset)"
+    "feature_v = dataset[columns]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO replace all categorical columns in feature_v by calling pd.factorize on them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -135,46 +157,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "assembler2 = VectorAssembler(inputCols=??? + ???, outputCol=\"features\")\n",
-    "fv2 = assembler2.transform(df_r2.na.drop())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Index labels, adding metadata to the label column.\n",
-    "# Fit on whole dataset to include all labels in index.\n",
-    "labelIndexer = StringIndexer(inputCol=\"CAND_NM\", outputCol=\"indexedLabel\").fit(fv2)\n",
-    "\n",
-    "\n",
-    "# We specify maxCategories so features with > 4 distinct values are treated as continuous.\n",
-    "featureIndexer2 =\\\n",
-    "    VectorIndexer(inputCol=\"features\", outputCol=\"indexedFeatures\").fit(fv2)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Train Random Forest Model with Pipeline\n",
+    "## Step 3: Create Random Forest Model\n",
     "\n",
-    "Train the model here.\n",
+    "create the model here.\n",
     "\n",
-    "**=> TODO: Create pipeline with labelIndexer, featureIndexer2, rf2 **\n",
+    "**=> TODO: Create Random Forest Model **\n",
     "\n"
    ]
   },
@@ -188,11 +178,12 @@
    "source": [
     "\n",
     "# Train a RandomForest model.\n",
-    "rf2 = RandomForestClassifier(labelCol=\"indexedLabel\", featuresCol=\"indexedFeatures\", numTrees=20, maxBins=10000)\n",
-    "\n",
-    "# Chain indexer and forest in a Pipeline\n",
-    "pipeline2 = Pipeline(stages=[???, ???, ???])\n",
-    "\n"
+    "rf2 = RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+    "            max_depth=2, max_features='auto', max_leaf_nodes=None,\n",
+    "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+    "            min_samples_leaf=1, min_samples_split=2,\n",
+    "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+    "            oob_score=False, random_state=0, verbose=0, warm_start=False)\n"
    ]
   },
   {
@@ -214,7 +205,8 @@
    "source": [
     "\n",
     "# Split the data into training and test sets (30% held out for testing)\n",
-    "(trainingData2, testData2) = fv2.randomSplit([???,???]) # do a random split 70%/30%\n"
+    "\n",
+    "trainingData2, testData2 = train_test_split(features_scaled,  test_size=???, random_state=0)\n"
    ]
   },
   {
@@ -245,17 +237,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "predictions2.select(feature_columns + ['probability', 'prediction']).show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,18 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# Select example rows to display.\n",
-    "predictions2.select(\"prediction\", \"CAND_NM\", \"features\").show(5)\n",
-    "\n",
-    "# Select (prediction, true label) and compute test error\n",
-    "evaluator2 = MulticlassClassificationEvaluator(\n",
-    "    labelCol=\"indexedLabel\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
-    "accuracy = evaluator2.evaluate(predictions2)\n",
-    "print(\"Test Error = %g\" % (1.0 - accuracy))\n",
-    "\n",
-    "rfModel2 = model2.stages[2]\n",
-    "print(rfModel2)  # summary only"
+    "# TODO: Calculate our accuracy"
    ]
   },
   {
@@ -315,7 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "predictions2.groupBy('CAND_NM').pivot('prediction', range(0,22)).count().na.fill(0).orderBy('CAND_NM').show()"
+    "# TODO: Print out a confusion matrix"
    ]
   },
   {
@@ -346,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "rfModel2.featureImportances"
+    "# Get the feautre importances"
    ]
   },
   {
