Fix relative paths to data

--- a/notebooks/3-nycflights-explore.ipynb
+++ b/notebooks/3-nycflights-explore.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/nycflights13/flights.csv.gz')"
+    "df = pd.read_csv('../data/nycflights13/flights.csv.gz')"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather = pd.read_csv('../../data/nycflights13/weather.csv.gz')\n",
+    "weather = pd.read_csv('../data/nycflights13/weather.csv.gz')\n",
     "weather"
    ]
   },
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "airports = pd.read_csv('../../data/nycflights13/airports.csv.gz')\n",
+    "airports = pd.read_csv('../data/nycflights13/airports.csv.gz')\n",
     "airports"
    ]
   },
